# TAGLIATUBI

./: .gitignore  CMakeLists.txt  README.md  build_log.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfig2
.cache/clangd/index/: AppBanchetto.cpp.428D849E42537A80.idx  AppBanchetto.hpp.9A1AC1C86D2D1661.idx  BLE.c.CB7FBA5D99AB820F.idx  Calculator.cpp.28C9D5EA81D33EAA.idx  Calculator.hpp.062C7E1501B75FB2.idx  Camera.cpp.A66A11F0693C91D9.idx  Camera.cpp.ED65E37EAFE47CB5.idx  Camera.hpp.374B74CF0D1D1CAF.idx  Camera.hpp.B0A26B03E74596E5.idx  DocBrowser.cpp.C686291BC8595D01.idx  DocBrowser.hpp.D9BCF9BF48ECE17B.idx  Logged.cpp.6B08E7D990D8D749.idx  Logged.hpp.248F40A06A40C89A.idx  MiaApp.cpp.0333B528363FD3D1.idx  MiaApp.hpp.7F1FFD02990BDE6F.idx  MusicPlayer.cpp.048A4B149F11CC3C.idx  MusicPlayer.hpp.8315EEDD16157194.idx  SD.c.667A6329F762934E.idx  Setting.cpp.BE94287DCA9C3C0E.idx  Setting.hpp.7F0731FF6284436E.idx  VideoPlayer.cpp.552B2BBA6728BFE3.idx  VideoPlayer.hpp.E8EF5DBC6EB9B29D.idx  actions.h.738E74F431EB8545.idx  animimg001.c.CF545A8C1B641FD5.idx  animimg002.c.9F09FB717D38ACC7.idx  animimg003.c.1F2DD4E1C17475EE.idx  app_camera_pipeline.cpp.547F1A9953640A81.idx  app_camera_pipeline.cpp.B664BA267C160BD1.idx  app_camera_pipeline.hpp.3F421EACC597F995.idx  app_camera_pipeline.hpp.D8065FC5294537B8.idx  app_humanface_detect.cpp.1F6F6D7EFEA63ED8.idx  app_humanface_detect.cpp.CC46994B839E5109.idx  app_humanface_detect.h.4AA429005CC33CB4.idx  app_humanface_detect.h.B749AD4F83A6C5EE.idx  app_launcher_data.h.22CA8E6CBC97BE72.idx  app_launcher_data.h.25C3E727B55409BA.idx  app_launcher_data.h.260B327DA1F58B73.idx  app_launcher_data.h.7D9668B6F73A6357.idx  (+1523 more)
components/apps/: CMakeLists.txt  apps.h
main/: CMakeLists.txt  audio_manager.c  audio_manager.h  badge_cache.c  badge_cache.h  banchetto_manager.c  banchetto_manager.h  battery_manager.c  battery_manager.h  ble_manager.c  ble_manager.h  collaudo_manager.c  collaudo_manager.h  credential.h  errori.txt  ff_memalloc_dma.c  gpio_manager.c  gpio_manager.h  http_client.c  http_client.h  i2c_manager.c  i2c_manager.h  idf_component.yml  json_parser.c  json_parser.h  key_manager.c  key_manager.h  log_manager.c  log_manager.h  main.cpp  mode.h  offline_journal.c  offline_journal.h  offline_queue.c  offline_queue.h  ota_manager.c  ota_manager.h  rfid_manager.c  rfid_manager.h  scanner_manager.c  (+12 more)
(+33 files in other folders)
